--- a/OnionSearcher/index.html
+++ b/OnionSearcher/index.html
@@ -19,7 +19,7 @@
     <div class="search-container">
     <div class="logo">
     <a href="/">
-        <img src="/logo.png" alt="Logo">
+        <img src="logo.png" alt="Logo">
         <div class="logo-text">Onion Search</div>
     </a>
 </div>
