--- a/LoveYou/index.html
+++ b/LoveYou/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For @beli_838547</title>
-    <link rel="stylesheet" href="/System/UI/Style/UI.css">
-    <link rel="stylesheet" href="/System/UI/Style/Style.css">
+    <link rel="stylesheet" href="/LoveYou/System/UI/Style/UI.css">
+    <link rel="stylesheet" href="/LoveYou/System/UI/Style/Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
