--- a/LoveYou/index.html
+++ b/LoveYou/index.html
@@ -41,7 +41,7 @@
         document.body.appendChild(audioElement);
 
         const hoaAudio = document.getElementById('audio');
-        hoaAudio.src = '/Sarah (Bonus Track) - Alex G.m4a';  
+        hoaAudio.src = 'Sarah (Bonus Track) - Alex G.m4a';  
 
         const lyrics = [
             "Сара бежит, чтобы почувствовать жжение в лёгких",
