--- a/LoveYou/index.html
+++ b/LoveYou/index.html
@@ -35,13 +35,14 @@
 
     <script>
         let isMuted = true;
+        let countdownStarted = false;
         const audioElement = document.createElement('audio');
         audioElement.id = 'audio';
         audioElement.style.display = 'none';
         document.body.appendChild(audioElement);
 
         const hoaAudio = document.getElementById('audio');
-        hoaAudio.src = 'Sarah (Bonus Track) - Alex G.m4a';  
+        hoaAudio.src = 'Sarah (Bonus Track) - Alex G.m4a';
 
         const lyrics = [
             "Сара бежит, чтобы почувствовать жжение в лёгких",
@@ -76,6 +77,14 @@
 
         const countdownElement = document.querySelector('.countdown');
 
+        hoaAudio.addEventListener('canplaythrough', () => {
+            console.log('Audio is fully loaded and ready to play.');
+            if (!countdownStarted) {
+                countdownStarted = true;
+                updateCountdown();
+            }
+        });
+
         function updateCountdown() {
             if (countdown > 0) {
                 countdownElement.innerText = `00:${countdown < 10 ? '0' + countdown : countdown}`;
@@ -98,11 +107,10 @@
 
         function toggleSound() {
             if (isMuted) {
-                hoaAudio.play();
+                hoaAudio.load();
                 isMuted = false;
                 document.querySelector('.sound-button i').classList.remove('fa-volume-mute');
                 document.querySelector('.sound-button i').classList.add('fa-volume-up');
-                updateCountdown();
             } else {
                 hoaAudio.pause();
                 isMuted = true;
