--- a/RelationshipTimer/index.html
+++ b/RelationshipTimer/index.html
@@ -180,7 +180,7 @@
         (function () {
             const hoaAudio = document.getElementById('audio');
             const profilesWithMusic = {
-                '/': 'sportsbeachbunny.mp3'
+                '/': '/sportsbeachbunny.mp3'
             };
             const currentPath = window.location.pathname;
 
